fix: set correct elastic url

--- a/charts/zeebe-benchmark/test/golden/servicemonitor.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/servicemonitor.golden.yaml
@@ -25,5 +25,5 @@ spec:
       release: "benchmark-test"
   namespaceSelector:
     matchNames:
-      - benchmark-65lu92
+      - benchmark-test
   sampleLimit: 0
