--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -318,11 +318,11 @@ camunda-platform:
     # RetentionPolicy.zeebeIndexMaxSize can be set to configure the maximum allowed zeebe index size in gigabytes.
     # After reaching that size, curator will delete that corresponding index on the next run.
     # To benefit from that configuration the schedule needs to be configured small enough, like every 15 minutes.
-    zeebeIndexMaxSize: 1
+    zeebeIndexMaxSize: 30
     # RetentionPolicy.operateIndexTTL defines after how many days an operate index can be deleted
-    operateIndexTTL: 30
+    operateIndexTTL: 1
     # RetentionPolicy.tasklistIndexTTL defines after how many days a tasklist index can be deleted
-    tasklistIndexTTL: 30
+    tasklistIndexTTL: 1
 
     # Image configuration for the elasticsearch curator cronjob
     # https://hub.docker.com/r/bitnami/elasticsearch-curator-archived/tags
@@ -336,6 +336,25 @@ camunda-platform:
 
   operate:
     enabled: false
+    image:
+      tag: 8.2.8
+    # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
+    resources:
+      requests:
+        cpu: 600m
+        memory: 400Mi
+      limits:
+        cpu: 2000m
+        memory: 2Gi
+    env:
+      - name: OPERATE_LOG_APPENDER
+        value: Stackdriver
+      - name: OPERATE_LOG_STACKDRIVER_SERVICENAME
+        value: operate
+      - name: OPERATE_LOG_STACKDRIVER_SERVICEVERSION
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace  
 
   tasklist:
     enabled: false
