--- a/charts/zeebe-benchmark/templates/curator-configmap.yaml
+++ b/charts/zeebe-benchmark/templates/curator-configmap.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: camunda-platform-curator-config
+  name: zeebe-benchmark-curator-config
   labels:
-    {{- include "camundaPlatform.labels" . | nindent 4 }}
+    {{- include "zeebe-benchmark.labels" . | nindent 4 }}
 data:
   action_file.yml: |-
     ---
