refactor: replace defaults
Replace defaults with conditional branches, to
avoid to maintain several defaults, in values, templates and benchmark apps.

Conditions allow toe also not set values, like resources

--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -45,13 +45,13 @@ worker:
   # Worker.benchmark defines the configuration for the default benchmark worker
   # See below if you want additional workers
   benchmark:
-    # Worker.benchmark.replicas defines how many replicas of the benchmark worker should be deployed, defaults to 3
+    # Worker.benchmark.replicas defines how many replicas of the benchmark worker should be deployed
     replicas: 3
-    # Worker.benchmark.capacity defines how many jobs the worker should activate and work on, defaults to 30.
+    # Worker.benchmark.capacity defines how many jobs the worker should activate and work on
     capacity: 60
-    # Worker.benchmark.jobType defines the job type which should be used by the worker, defaults to "benchmark-task"
+    # Worker.benchmark.jobType defines the job type which should be used by the worker
     jobType: "benchmark-task"
-    # Worker.benchmark.logLevel defines the logging level for the benchmark worker, defaults to "INFO"
+    # Worker.benchmark.logLevel defines the logging level for the benchmark worker
     logLevel: "WARN"
     # Worker.benchmark.resources defines the resources for the benchmark worker
     resources:
@@ -65,13 +65,13 @@ worker:
   # Worker.benchmark defines the configuration for the default benchmark worker
   # Adding more and different worker can be done via adding a new map like:
   #  benchmark-2:
-  #    # Worker.benchmark.replicas defines how many replicas of the benchmark worker should be deployed, defaults to 3
+  #    # Worker.benchmark.replicas defines how many replicas of the benchmark worker should be deployed
   #    replicas: 3
-  #    # Worker.benchmark.capacity defines how many jobs the worker should activate and work on, defaults to 30.
+  #    # Worker.benchmark.capacity defines how many jobs the worker should activate and work on
   #    capacity: 60
-  #    # Worker.benchmark.jobType defines the job type which should be used by the worker, defaults to "benchmark-task"
+  #    # Worker.benchmark.jobType defines the job type which should be used by the worker
   #    jobType: "benchmark-2-task"
-  #    # Worker.benchmark.logLevel defines the logging level for the benchmark worker, defaults to "INFO"
+  #    # Worker.benchmark.logLevel defines the logging level for the benchmark worker
   #    logLevel: "WARN"
   #    # Worker.benchmark.resources defines the resources for the benchmark worker
   #    resources:
