--- a/charts/zeebe-benchmark/templates/worker.yaml
+++ b/charts/zeebe-benchmark/templates/worker.yaml
@@ -26,16 +26,24 @@ spec:
                 -Dconfig.override_with_env_vars=true
                 -Dapp.brokerUrl={{ $.Release.Name }}-zeebe-gateway:26500
                 -Dzeebe.client.requestTimeout=62000
-                -Dapp.worker.capacity={{ $worker.capacity | default 30 }}
+                {{- if $worker.capacity }}
+                -Dapp.worker.capacity={{ $worker.capacity }}
+                {{- end }}
                 -Dapp.worker.pollingDelay=1ms
                 -Dapp.worker.completionDelay=50ms
                 -Dapp.worker.workerName={{ $workerName | quote }}
-                -Dapp.worker.jobType={{ $worker.jobType | quote | default "benchmark-task" }}
+                {{- if $worker.jobType }}
+                -Dapp.worker.jobType={{ $worker.jobType | quote }}
+                {{- end }}
                 -XX:+HeapDumpOnOutOfMemoryError
+            {{- if $worker.logLevel }}
             - name: LOG_LEVEL
-              value: {{ $worker.logLevel | quote | default "INFO" }}
+              value: {{ $worker.logLevel | quote }}
+            {{- end }}
+          {{- if $worker.resources }}
           resources:
             {{- toYaml $worker.resources | nindent 12 }}
+          {{- end }}
           ports:
             - containerPort: 9600
               name: "http"
