--- a/charts/zeebe-benchmark/templates/worker.yaml
+++ b/charts/zeebe-benchmark/templates/worker.yaml
@@ -1,51 +1,47 @@
-{{- range $workerName, $worker := .Values.worker }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ $workerName }}-worker
+  name: worker
   labels:
-    app: {{ $workerName }}-worker
+    app: worker
 spec:
   selector:
     matchLabels:
-      app: {{ $workerName }}-worker
-  replicas: {{ $worker.replicas | default 3}}
+      app: worker
+  replicas: {{ .Values.worker.replicas }}
   template:
     metadata:
       labels:
-        app: {{ $workerName }}-worker
+        app: worker
         app.kubernetes.io/component: zeebe-client
     spec:
       containers:
-        - name: {{ $workerName }}-worker
-          image: "{{ $.Values.global.image.repository }}/worker:{{ $.Values.global.image.tag }}"
-          imagePullPolicy: {{ $.Values.global.image.pullPolicy }}
+        - name: worker
+          image: "{{ .Values.global.image.repository }}/worker:{{ .Values.global.image.tag }}"
+          imagePullPolicy: {{ .Values.global.image.pullPolicy }}
           env:
             - name: JDK_JAVA_OPTIONS
               value: >-
                 -Dconfig.override_with_env_vars=true
-                -Dapp.brokerUrl={{ $.Release.Name }}-zeebe-gateway:26500
+                -Dapp.brokerUrl={{ .Release.Name }}-zeebe-gateway:26500
                 -Dzeebe.client.requestTimeout=62000
-                {{- if $worker.capacity }}
-                -Dapp.worker.capacity={{ $worker.capacity }}
-                {{- end }}
+                -Dapp.worker.capacity={{ .Values.worker.capacity }}
                 -Dapp.worker.pollingDelay=1ms
                 -Dapp.worker.completionDelay=50ms
-                -Dapp.worker.workerName={{ $workerName | quote }}
-                {{- if $worker.jobType }}
-                -Dapp.worker.jobType={{ $worker.jobType | quote }}
-                {{- end }}
                 -XX:+HeapDumpOnOutOfMemoryError
-            {{- if $worker.logLevel }}
             - name: LOG_LEVEL
-              value: {{ $worker.logLevel | quote }}
-            {{- end }}
-          {{- if $worker.resources }}
+              value: "warn"
+          envFrom:
+            - configMapRef:
+                name: worker-config
+                optional: true
           resources:
-            {{- toYaml $worker.resources | nindent 12 }}
-          {{- end }}
+            limits:
+              cpu: 500m
+              memory: 256Mi
+            requests:
+              cpu: 500m
+              memory: 256Mi
           ports:
             - containerPort: 9600
               name: "http"
----
-{{- end }}
