--- a/charts/zeebe-benchmark/test/golden/worker.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/worker.golden.yaml
@@ -3,22 +3,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: benchmark-worker
+  name: worker
   labels:
-    app: benchmark-worker
+    app: worker
 spec:
   selector:
     matchLabels:
-      app: benchmark-worker
-  replicas: 3
+      app: worker
+  replicas: 0
   template:
     metadata:
       labels:
-        app: benchmark-worker
+        app: worker
         app.kubernetes.io/component: zeebe-client
     spec:
       containers:
-        - name: benchmark-worker
+        - name: worker
           image: "gcr.io/zeebe-io/worker:SNAPSHOT"
           imagePullPolicy: Always
           env:
@@ -30,11 +30,13 @@ spec:
                 -Dapp.worker.capacity=60
                 -Dapp.worker.pollingDelay=1ms
                 -Dapp.worker.completionDelay=50ms
-                -Dapp.worker.workerName="benchmark"
-                -Dapp.worker.jobType="benchmark-task"
                 -XX:+HeapDumpOnOutOfMemoryError
             - name: LOG_LEVEL
-              value: "WARN"
+              value: "warn"
+          envFrom:
+            - configMapRef:
+                name: worker-config
+                optional: true
           resources:
             limits:
               cpu: 500m
