--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -220,7 +220,63 @@ camunda-platform:
     ## @param core.enabled if true, all related resources are deployed via the helm release
     enabled: true
 
+    # Environment variables
     env:
+      - name: K8S_NAMESPACE
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
+      - name: K8S_NAME
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.name
+      # Enable JSON logging for google cloud stackdriver
+      - name: ZEEBE_LOG_APPENDER
+        value: Stackdriver
+      - name: ZEEBE_LOG_STACKDRIVER_SERVICENAME
+        value: zeebe
+      - name: ZEEBE_LOG_STACKDRIVER_SERVICEVERSION
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
+      - name: OPERATE_LOG_APPENDER
+        value: Stackdriver
+      - name: OPERATE_LOG_STACKDRIVER_SERVICENAME
+        value: operate
+      - name: OPERATE_LOG_STACKDRIVER_SERVICEVERSION
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
+      - name: ATOMIX_LOG_LEVEL
+        value: INFO
+      - name: ZEEBE_LOG_LEVEL
+        value: DEBUG
+      - name: PYROSCOPE_SERVER_ADDRESS
+        value: "http://pyroscope.pyroscope.svc.cluster.local:4040"
+      - name: PYROSCOPE_APPLICATION_NAME
+        value: "io.camunda.zeebe.broker"
+      - name: PYROSCOPE_LOG_LEVEL
+        value: "debug"
+      - name: PYROSCOPE_FORMAT
+        value: "jfr"
+      - name: PYROSCOPE_PROFILER_EVENT
+        value: "cpu"
+      - name: PYROSCOPE_PROFILER_ALLOC
+        value: "0"
+      - name: PYROSCOPE_PROFILER_LOCK
+        value: "0"
+      - name: PYROSCOPE_LABELS
+        value: "namespace=$(K8S_NAMESPACE), pod=$(K8S_NAME)"
+      # To be able to load a separate/additional configuration
+      # See https://github.com/camunda/camunda-platform-helm/issues/2197
+      - name: SPRING_CONFIG_ADDITIONALLOCATION
+        value: "/usr/local/camunda/config/benchmark-config.yaml"
+      - name: JAVA_OPTS
+        valueFrom:
+          configMapKeyRef:
+            name: zeebe-config
+            key: java-opts
+            optional: true
       # To run Operate and Tasklist add these to the value of this variable
       - name: SPRING_PROFILES_ACTIVE
         value: "auth,broker,operate"
