--- a/charts/zeebe-benchmark/values-realistic-benchmark.yaml
+++ b/charts/zeebe-benchmark/values-realistic-benchmark.yaml
@@ -6,9 +6,9 @@ global:
   # Image configuration to be used in each sub chart
   image:
     # Image.repository defines the repository from which to fetch the docker images
-    repository: "gcr.io/zeebe-io"
+    repository: "camunda/zeebe"
     # Image.tag defines the tag / version which should be used in the chart
-    tag: SNAPSHOT
+    tag: 8.6.6
     # Image.pullPolicy defines the image pull policy which should be used https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
     pullPolicy: Always
   # Disable Identity completely; both this flag and `camunda-platform.identity.enabled` are required.
@@ -225,7 +225,7 @@ camunda-platform:
     image:
       # Image.repository defines which image repository to use
       repository: camunda/zeebe
-      tag: SNAPSHOT
+      tag: 8.6.6
 
     # Retention can be used to define the data in Elasticsearch (ILM).
     retention:
@@ -251,7 +251,7 @@ camunda-platform:
     image:
       # Image.repository defines which image repository to use
       repository: camunda/zeebe
-      tag: SNAPSHOT
+      tag: 8.6.6
 
     # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
     resources:
@@ -266,7 +266,7 @@ camunda-platform:
     enabled: true
     image:
       repository: camunda/operate
-      tag: SNAPSHOT
+      tag: 8.6.6
     # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
     resources:
       requests:
