--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -11,7 +11,7 @@ dependencies:
   - name: camunda-platform
     repository: "oci://ghcr.io/camunda/helm"
     version: "0.0.0-12.0.0-alpha1"
-    condition: "camunda.enabled"
+    condition: "camunda-platform.enabled"
   - name: prometheus-elasticsearch-exporter
     repository: "https://prometheus-community.github.io/helm-charts"
     version: 6.4.0
